faq initial structure

--- a/index.html
+++ b/index.html
@@ -21,10 +21,17 @@
   </style>
 </head>
 <body>
-  <div class="container">
-    <img src="images/illustration-woman-online-mobile.svg" alt="woman choosing">
-    <img src="images/bg-pattern-mobile.svg" alt="background">
-  </div>
+  <section id="Faq">
+    <div class="faq-container">
+      <div id="faq-image">
+        <img src="images/illustration-woman-online-mobile.svg" alt="woman choosing">
+        <img src="images/bg-pattern-mobile.svg" alt="background">
+      </div>
+      <div class="faq-content">
+        <h2>FAQ</h2>
+      </div>
+    </div>
+  </section>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Alan Gaia</a>.
