added faq container css

--- a/index.html
+++ b/index.html
@@ -21,14 +21,20 @@
   </style>
 </head>
 <body>
+  <!-- FAQ -->
   <section id="Faq">
     <div class="faq-container">
+
+      <!-- Woman Faq image -->
       <div id="faq-image">
         <img src="images/illustration-woman-online-mobile.svg" alt="woman choosing">
         <img src="images/bg-pattern-mobile.svg" alt="background">
       </div>
+
+      <!-- Questions FAQ -->
       <div class="faq-content">
         <h2>FAQ</h2>
+        <button>How many members can I invite?</button>
       </div>
     </div>
   </section>
