responsive image mobile done

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
+    .attribution { font-size: 2em; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
@@ -27,14 +27,15 @@
 
       <!-- Woman Faq image -->
       <div id="faq-image">
-        <img src="images/illustration-woman-online-mobile.svg" alt="woman choosing">
-        <img src="images/bg-pattern-mobile.svg" alt="background">
+        <img id="woman-image" src="images/illustration-woman-online-mobile.svg" alt="woman choosing">
+        <img id="woman-floor-image" src="images/bg-pattern-mobile.svg" alt="background">
       </div>
 
       <!-- Questions FAQ -->
       <div class="faq-content">
-        <h2>FAQ</h2>
+        <h2 class="subtitle">FAQ</h2>
         <button>How many members can I invite?</button>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed alias repellendus vero doloremque ea nesciunt expedita reiciendis veritatis totam numquam delectus cumque nostrum voluptates, illo culpa distinctio! Unde, quia officia.</p>
       </div>
     </div>
   </section>
