--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 2em; text-align: center; }
+    .attribution { font-size: 1.5em; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
@@ -34,7 +34,7 @@
       <!-- Questions FAQ -->
       <div class="faq-content">
         <h2 class="subtitle">FAQ</h2>
-        <button>How many members can I invite?</button>
+        <button class="question">How many members can I invite? <img src="images/icon-arrow-down.svg" alt="arrow down"></button>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed alias repellendus vero doloremque ea nesciunt expedita reiciendis veritatis totam numquam delectus cumque nostrum voluptates, illo culpa distinctio! Unde, quia officia.</p>
       </div>
     </div>
