--- a/index.html
+++ b/index.html
@@ -35,11 +35,12 @@
       <div class="faq-content">
         <h2 class="subtitle">FAQ</h2>
         <button class="question">How many members can I invite? <img src="images/icon-arrow-down.svg" alt="arrow down"></button>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed alias repellendus vero doloremque ea nesciunt expedita reiciendis veritatis totam numquam delectus cumque nostrum voluptates, illo culpa distinctio! Unde, quia officia.</p>
+        <p class="answer">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed alias repellendus vero doloremque ea nesciunt expedita reiciendis veritatis totam numquam delectus cumque nostrum voluptates, illo culpa distinctio! Unde, quia officia.</p>
         <button class="question">How many members can I invite? <img src="images/icon-arrow-down.svg" alt="arrow down"></button>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed alias repellendus vero doloremque ea nesciunt expedita reiciendis veritatis totam numquam delectus cumque nostrum voluptates, illo culpa distinctio! Unde, quia officia.</p>
+        <p class="answer">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed alias repellendus vero doloremque ea nesciunt expedita reiciendis veritatis totam numquam delectus cumque nostrum voluptates, illo culpa distinctio! Unde, quia officia.</p>
         <button class="question">How many members can I invite? <img src="images/icon-arrow-down.svg" alt="arrow down"></button>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed alias repellendus vero doloremque ea nesciunt expedita reiciendis veritatis totam numquam delectus cumque nostrum voluptates, illo culpa distinctio! Unde, quia officia.</p>
+        <p class="answer">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed alias repellendus vero doloremque ea nesciunt expedita reiciendis veritatis totam numquam delectus cumque nostrum voluptates, illo culpa distinctio! Unde, quia officia.</p>
+ 
       </div>
     </div>
   </section>
